# tonfc

./: CMakeLists.txt
cmake/: FindLibNFC.cmake
src/: device.cpp  device.hpp  main.cpp
